--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,6 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: false
 
 # Setup
 title:               Lanyon
@@ -14,9 +13,9 @@ paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Chris Addy
+  url:               https://twitter.com/
+  email:             chris.william.addy@gmail.com
 
 # Custom vars
 version:             1.0.0
