--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               theminerleague
+tagline:             'data "science"'
+description:         personal blog
 url:                 http://chrisaddy.github.io
-baseurl:             'http://chrisaddy.github.io'
+baseurl:             ''
 paginate:            5
 
 # About/contact
@@ -16,6 +16,3 @@ author:
   name:              Chris Addy
   url:               https://twitter.com/
   email:             chris.william.addy@gmail.com
-
-# Custom vars
-version:             1.0.0
